@@ -418,7 +418,7 @@ class ReplaceBitvectorWithNumeralAndFunctionTheory<T extends NumeralFormula> ext
     if (pBits.isEmpty()) {
       return booleanFormulaManager.makeTrue();
     }
-    int bitsize = getLength(pBits.get(0));
+    int bitsize = getLength(pBits.getFirst());
     pBits.forEach(
         bit ->
             Preconditions.checkArgument(
